added product services and operations

--- a/BigBazaar.Services/BigBazaar.Services.csproj
+++ b/BigBazaar.Services/BigBazaar.Services.csproj
@@ -51,7 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoriesServices.cs" />
+    <Compile Include="CategoriesService.cs" />
+    <Compile Include="ProductsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
