--- a/BigBazaar.Web/Views/Web.config
+++ b/BigBazaar.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="BigBazaar.Web" />
+        <add namespace="BigBazaar.Entities" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
